# custom_samples

./: .env  .gitignore  Compose.yaml  DEPLOYMENT.md  DOCKERFILE  PREREQUISITE.md  README.md  Taskfile.yaml  config.domyn.blueprint.yaml  config.domyn.devops.yaml  config.domyn.qa.yaml  values.yaml
apps/example/: README.md
domyn-cli/: README.md  pyproject.toml
domyn-cli/domyn/: main.py
helm/services/: values.yaml
html/: index.html
kubernetes/: values.blueprint.yaml  values.qa.yaml  values.test.yaml
kubernetes/helm/: values.test.yaml
kubernetes/manifest/: secret.yaml
scripts/example/: pull.sh
scripts/tls/: README.md  (+3 more)
service/: values.yaml
services/custom_ui_guardrail/: Dockerfile  Makefile  README.md  admin_ui_template.html  docker-compose.yml  guardrail_custom_ui_blueprint.py  pyproject.toml  values.yaml
services/custom_ui_guardrail/app/: config.py  judge.py  main.py  models.py
services/custom_ui_guardrail/app/routers/: input_guardrail.py  output_guardrail.py
services/custom_ui_guardrail/templates/: verdict_history_ui.html
services/example2/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  values.yaml
services/example2/src/mcpesg/: app.py  config.py  main.py  main_dev.py  server.py
services/example2/src/mcpesg/interfaces/mcp/: esg.py
services/example2/src/mcpesg/interfaces/rest/: esg.py
services/example2/src/mcpesg/use_cases/: esg.py
services/example2/tests/: test_esg_use_case.py
services/hermes_platform_gateway/plugins/hermes-platform-gateway/: README.md  plugin.yaml  pyproject.toml
services/hermes_platform_gateway/plugins/hermes-platform-gateway/hermes_platform_gateway/: __init__.py  adapter.py  client.py  relay_client.py  schema.py
(+73 files in other folders)
