[project]
name = "mcpesg"
version = "0.1.0"
description = "Example MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "fastmcp>=3.2.0",
    "kaleido>=1.2.0",
    "plotly>=6.6.0",
    "pydantic-settings>=2.13.1",
    "yfinance>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpesg"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]
