[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-platform-gateway"
version = "0.3.0"
description = "Dynamic platform tool gateway plugin for hermes-agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "respx>=0.20", "httpx>=0.27", "aiohttp>=3.9"]

[project.entry-points."hermes_agent.plugins"]
platform-gateway = "hermes_platform_gateway"

[tool.pytest.ini_options]
asyncio_mode = "strict"
